// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Default props and rendering verifies the snapshot for the component 1`] = `
<div
  className="ajc-menu-bar-container ajc-default ajc-background-grey-2"
  id="test-menu"
  role="navigation"
>
  <div
    className="ajc-menu-bar-content-outer"
    id="menu-bar-content-outer"
  >
    <div
      className="ajc-menu-bar-content-inner"
      id="menu-bar-content-inner"
    >
      <div
        className="ajc-menu-bar-item-single ajc-menu-bar-item-grey"
        id="menu-item-0"
      >
        <a
          className="ajc-menu-bar-item-content ajc-default"
          href="/test-item-1"
          onClick={[Function]}
          tabIndex={0}
        >
            
          Menu Item 1
            
        </a>
      </div>
      <div
        className="ajc-menu-bar-item-single"
        id="dropdown-menu-1"
      >
        <div
          className="ajc-menu-bar-item-content ajc-menu-bar-item-grey"
          data-expanded="false"
          onClick={[Function]}
          onKeyPress={[Function]}
          tabIndex={0}
        >
            
          Dropdown Menu Item 1
            
          <div
            className="ajc-small-menu-icon-container ajc-default"
            role="presentation"
          >
            <div
              className="ajc-small-menu-icon-upper ajc-background-white"
            />
            <div
              className="ajc-small-menu-icon-upper ajc-background-white"
            />
            <div
              className="ajc-small-menu-icon-lower ajc-background-white"
            />
          </div>
            
        </div>
        <div
          className="ajc-dropdown-menu-container ajc-background-grey-2 ajc-dropdown-menu-container-hidden ajc-hidden"
          id="dropdown-menu-1--content-parent"
        >
          <a
            className="ajc-dropdown-menu-item ajc-menu-bar-item-grey"
            href="/test-dropdown-item-1-1"
            id="dropdown-menu-1--content-parent--dropdown-menu-item-0"
            onClick={[Function]}
            tabIndex={0}
          >
              
            Dropdown Menu Item 1.1
              
            <div
              className="ajc-small-right-arrow-icon-container ajc-default ajc-border-colour-white"
              role="presentation"
            />
              
          </a>
          <a
            className="ajc-dropdown-menu-item ajc-menu-bar-item-grey"
            href="/test-dropdown-item-1-2"
            id="dropdown-menu-1--content-parent--dropdown-menu-item-1"
            onClick={[Function]}
            tabIndex={0}
          >
              
            Dropdown Menu Item 1.2
              
            <div
              className="ajc-small-right-arrow-icon-container ajc-default ajc-border-colour-white"
              role="presentation"
            />
              
          </a>
        </div>
      </div>
      <div
        className="ajc-menu-bar-item-single ajc-menu-bar-item-grey"
        id="menu-item-2"
      >
        <a
          className="ajc-menu-bar-item-content ajc-default"
          href="/test-item-2"
          onClick={[Function]}
          tabIndex={0}
        >
            
          Menu Item 2
            
        </a>
      </div>
      <div
        className="ajc-menu-bar-item-single"
        id="dropdown-menu-3"
      >
        <div
          className="ajc-menu-bar-item-content ajc-menu-bar-item-grey"
          data-expanded="false"
          onClick={[Function]}
          onKeyPress={[Function]}
          tabIndex={0}
        >
            
          Dropdown Menu Item 2
            
          <div
            className="ajc-small-menu-icon-container ajc-default"
            role="presentation"
          >
            <div
              className="ajc-small-menu-icon-upper ajc-background-white"
            />
            <div
              className="ajc-small-menu-icon-upper ajc-background-white"
            />
            <div
              className="ajc-small-menu-icon-lower ajc-background-white"
            />
          </div>
            
        </div>
        <div
          className="ajc-dropdown-menu-container ajc-background-grey-2 ajc-dropdown-menu-container-hidden ajc-hidden"
          id="dropdown-menu-3--content-parent"
        >
          <a
            className="ajc-dropdown-menu-item ajc-menu-bar-item-grey"
            href="/test-dropdown-item-2-1"
            id="dropdown-menu-3--content-parent--dropdown-menu-item-0"
            onClick={[Function]}
            tabIndex={0}
          >
              
            Dropdown Menu Item 2.1
              
            <div
              className="ajc-small-right-arrow-icon-container ajc-default ajc-border-colour-white"
              role="presentation"
            />
              
          </a>
          <a
            className="ajc-dropdown-menu-item ajc-menu-bar-item-grey"
            href="/test-dropdown-item-2-2"
            id="dropdown-menu-3--content-parent--dropdown-menu-item-1"
            onClick={[Function]}
            tabIndex={0}
          >
              
            Dropdown Menu Item 2.2
              
            <div
              className="ajc-small-right-arrow-icon-container ajc-default ajc-border-colour-white"
              role="presentation"
            />
              
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu Transferred props and rendering: Component with red background verifies the snapshot for the component 1`] = `
<div
  className="ajc-menu-bar-container ajc-default ajc-background-red"
  id="test-menu"
  role="navigation"
>
  <div
    className="ajc-menu-bar-content-outer"
    id="menu-bar-content-outer"
  >
    <div
      className="ajc-menu-bar-content-inner"
      id="menu-bar-content-inner"
    >
      <div
        className="ajc-menu-bar-item-single ajc-menu-bar-item-red"
        id="menu-item-0"
      >
        <a
          className="ajc-menu-bar-item-content ajc-default"
          href="/test-item-1"
          onClick={[Function]}
          tabIndex={0}
        >
            
          Menu Item 1
            
        </a>
      </div>
      <div
        className="ajc-menu-bar-item-single"
        id="dropdown-menu-1"
      >
        <div
          className="ajc-menu-bar-item-content ajc-menu-bar-item-red"
          data-expanded="false"
          onClick={[Function]}
          onKeyPress={[Function]}
          tabIndex={0}
        >
            
          Dropdown Menu Item 1
            
          <div
            className="ajc-small-menu-icon-container ajc-default"
            role="presentation"
          >
            <div
              className="ajc-small-menu-icon-upper ajc-background-white"
            />
            <div
              className="ajc-small-menu-icon-upper ajc-background-white"
            />
            <div
              className="ajc-small-menu-icon-lower ajc-background-white"
            />
          </div>
            
        </div>
        <div
          className="ajc-dropdown-menu-container ajc-background-red ajc-dropdown-menu-container-hidden ajc-hidden"
          id="dropdown-menu-1--content-parent"
        >
          <a
            className="ajc-dropdown-menu-item ajc-menu-bar-item-red"
            href="/test-dropdown-item-1-1"
            id="dropdown-menu-1--content-parent--dropdown-menu-item-0"
            onClick={[Function]}
            tabIndex={0}
          >
              
            Dropdown Menu Item 1.1
              
            <div
              className="ajc-small-right-arrow-icon-container ajc-default ajc-border-colour-white"
              role="presentation"
            />
              
          </a>
          <a
            className="ajc-dropdown-menu-item ajc-menu-bar-item-red"
            href="/test-dropdown-item-1-2"
            id="dropdown-menu-1--content-parent--dropdown-menu-item-1"
            onClick={[Function]}
            tabIndex={0}
          >
              
            Dropdown Menu Item 1.2
              
            <div
              className="ajc-small-right-arrow-icon-container ajc-default ajc-border-colour-white"
              role="presentation"
            />
              
          </a>
        </div>
      </div>
      <div
        className="ajc-menu-bar-item-single ajc-menu-bar-item-red"
        id="menu-item-2"
      >
        <a
          className="ajc-menu-bar-item-content ajc-default"
          href="/test-item-2"
          onClick={[Function]}
          tabIndex={0}
        >
            
          Menu Item 2
            
        </a>
      </div>
      <div
        className="ajc-menu-bar-item-single"
        id="dropdown-menu-3"
      >
        <div
          className="ajc-menu-bar-item-content ajc-menu-bar-item-red"
          data-expanded="false"
          onClick={[Function]}
          onKeyPress={[Function]}
          tabIndex={0}
        >
            
          Dropdown Menu Item 2
            
          <div
            className="ajc-small-menu-icon-container ajc-default"
            role="presentation"
          >
            <div
              className="ajc-small-menu-icon-upper ajc-background-white"
            />
            <div
              className="ajc-small-menu-icon-upper ajc-background-white"
            />
            <div
              className="ajc-small-menu-icon-lower ajc-background-white"
            />
          </div>
            
        </div>
        <div
          className="ajc-dropdown-menu-container ajc-background-red ajc-dropdown-menu-container-hidden ajc-hidden"
          id="dropdown-menu-3--content-parent"
        >
          <a
            className="ajc-dropdown-menu-item ajc-menu-bar-item-red"
            href="/test-dropdown-item-2-1"
            id="dropdown-menu-3--content-parent--dropdown-menu-item-0"
            onClick={[Function]}
            tabIndex={0}
          >
              
            Dropdown Menu Item 2.1
              
            <div
              className="ajc-small-right-arrow-icon-container ajc-default ajc-border-colour-white"
              role="presentation"
            />
              
          </a>
          <a
            className="ajc-dropdown-menu-item ajc-menu-bar-item-red"
            href="/test-dropdown-item-2-2"
            id="dropdown-menu-3--content-parent--dropdown-menu-item-1"
            onClick={[Function]}
            tabIndex={0}
          >
              
            Dropdown Menu Item 2.2
              
            <div
              className="ajc-small-right-arrow-icon-container ajc-default ajc-border-colour-white"
              role="presentation"
            />
              
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
